--- a/app/assets/templates/boards/form.jst.ejs
+++ b/app/assets/templates/boards/form.jst.ejs
@@ -1,7 +1,7 @@
 <% if (board) { %>
 <form>
   <label for="title">Board Title</label>
-  <input type="text" name="title" id="title" value="<%= board.escape("title") %>">
+  <input type="text" name="board[title]" id="title" value="<%= board.escape("title") %>">
 
   <p><input type="submit" value="Continue &rarr;"></p>
 </form>
