--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -1,11 +1,11 @@
 li.list_entry, li.board_entry {
-  
+
   background-color: #fafafa;
   border: 1px solid #d4d4d4;
-  
+
   text-align: center;
   font-size: 18px;
-  
+
   width: 225px;
   margin: 3px;
   border-radius: 4px;
@@ -14,8 +14,8 @@ li.list_entry, li.board_entry {
   padding:6px 12px 8px 12px;
   font-size:18px;
   margin-bottom: 15px;
-  
-  float: left;;
+
+  float: left;
 }
 
 button.newBoard {
