--- a/app/assets/templates/lists/form.jst.ejs
+++ b/app/assets/templates/lists/form.jst.ejs
@@ -3,7 +3,7 @@
   <label for="title">List Title</label>
   <input type="text" name="title" id="title" value="<%= list.escape("title") %>">
   <input type="hidden" name="rank" value="<%= board.length + 1 %>">
-  <input type="hidden" name="rank" value="<%= board.length + 1 %>">
+  <input type="hidden" name="board_id" value="<%= board.length + 1 %>">
 
   <p><input type="submit" value="Continue &rarr;"></p>
 </form>
