Change routing of creating new board

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -6,7 +6,7 @@
     <input type="text" name="list[title]" value="<%= list.escape("title") %>">
   </form>
 
-  <button class="new_card">Add Card</button>
+  <div class="new_card"></div>
 
   <ul class="cards"></ul>
 
