--- a/app/assets/templates/cards/show.jst.ejs
+++ b/app/assets/templates/cards/show.jst.ejs
@@ -4,5 +4,5 @@
     <input type="text" name="card[title]" value="<%= card.escape("title") %>">
   </form>
 
-  <button class="hidden destroy_list">Destroy Card</button>
+  <button class="hidden card_entry destroy_card">Destroy Card</button>
 </li>
