Add draggable functionality to lists

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,4 +1,4 @@
-<li class="board_entry">
+<li class="board_entry" data-rank="<%= list.escape("rank") %>">
   <span class="title" data-list="<%= list.escape("id") %>">
     <%= list.escape("title") %>
   </span>
