--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -27,3 +27,47 @@ button.newList {
   display: block;
   clear: both;
 }
+
+.list_holder {
+  border: 1px solid #d4d4d4;
+
+  text-align: center;
+  font-size: 18px;
+
+  width: 225px;
+  height: 300px;
+  margin: 3px;
+  background: lightgray;
+  border-radius: 4px;
+  border-radius: 4px;
+
+  padding:6px 12px 8px 12px;
+  font-size:18px;
+  margin-bottom: 15px;
+
+  float: left;
+}
+
+.card_holder {
+  border: 1px solid #d4d4d4;
+
+  text-align: center;
+  font-size: 18px;
+
+  width: 170px;
+  height: 20px;
+  margin: 3px;
+  background: lightgray;
+  border-radius: 4px;
+  border-radius: 4px;
+
+  padding:6px 12px 8px 12px;
+  font-size:18px;
+  margin-bottom: 15px;
+
+  float: left;
+}
+
+#sortable.cards {
+  min-height: 30px
+}
