--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -1,5 +1,4 @@
-li.list_entry, li.board_entry, .new_list {
-
+li.board_entry, li.list_entry, .new_list {
   background-color: #fafafa;
   border: 1px solid #d4d4d4;
 
@@ -18,6 +17,17 @@ li.list_entry, li.board_entry, .new_list {
   float: left;
 }
 
+li.board_entry {
+  background-color: #DBDBDB;
+  text-align: left;
+}
+
+.new_list {
+  background-color: #1e638c;
+  color: lightblue;
+  border: 0px;
+}
+
 button.newBoard {
   display: block;
   clear: both;
@@ -28,13 +38,16 @@ button.newList {
   clear: both;
 }
 
+.destroy-board {
+  margin: 20px;
+}
+
 .edit_board_title input {
   background-color: green;
   font-size: 18px;
 }
 
 .list_holder {
-  border: 1px solid #d4d4d4;
 
   text-align: center;
   font-size: 18px;
@@ -42,7 +55,7 @@ button.newList {
   width: 225px;
   height: 300px;
   margin: 3px;
-  background: lightgray;
+  background: #A8A8A8;
   border-radius: 4px;
   border-radius: 4px;
 
