--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -23,7 +23,7 @@
 li.card_entry {
   cursor: pointer;
   font-size: 15px;
-  background-color: #daf1fb;
+  background-color: #F2F2F2;;
   border: 1px solid black;
   padding: 3px;
   margin: 3px;
