--- a/app/assets/templates/cards/show.jst.ejs
+++ b/app/assets/templates/cards/show.jst.ejs
@@ -16,6 +16,9 @@
         <form class="hidden edit_card_title">
           <input type="text" value="<%= card.escape("title") %>"></input>
         </form>
+      </div>
+      <div class="modal-footer">
+      (Click above to edit)
         <button class="card_entry destroy_card">Destroy Card</button>
       </div>
     </div>
