--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,5 +1,5 @@
 <div data-rank="<%= list.escape("rank") %>">
-  <span class="title" data-list="<%= list.escape("id") %>">
+  <span class="title list_title" data-list="<%= list.escape("id") %>">
     <%= list.escape("title") %>
   </span>
 
