change a small parens imbalance

--- a/app/assets/stylesheets/lists.css
+++ b/app/assets/stylesheets/lists.css
@@ -29,8 +29,8 @@
 	background-color: #1e638c;
 }
 
-.edit_board_title input') {
-	font-size: '30px'
+.edit_board_title input {
+  font-size: '30px';
 }
 
 .dropdown {
