trying to fix css for heroku

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -100,7 +100,7 @@ button, input[type="submit"] {
 }
 
 button:hover, input[type="submit"]:hover {
-  background-color: transparent;
+  background: transparent;
   color: blue;
 }
 
