--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -88,7 +88,7 @@ button.newList {
   width: 170px;
   height: 20px;
   margin: 3px;
-  background: lightgray;
+  background: #B6B8B7;
   border-radius: 4px;
   border-radius: 4px;
 
