--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <div class="navbar-header">
         <ul class="nav">
           <li>
-            <span class="title">Trellino</span>
+            <span class="title">TrellYo!</span>
           </li>
         </ul>
       </div>
