add guest account, reformat board index

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.btn.btn-success.btn-lg {
+	margin-top: 30px;
+	font-size: 40px;
+	height: 100px;
+}
