--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,7 @@ div#content {
   padding: 30px;
   margin: 5px;
   width: 300px;
+  height: 100px;
   overflow: hidden;
 }
 
@@ -126,4 +127,9 @@ h1 {
 
 label {
   color: white;
+}
+
+.board-choices {
+  display: inline-block;
+  padding-bottom: 40px
 }
